pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorDuplicateParams1.pkl
a = List(1, 2, 3, 4)

foo {
  for (i, i in a) {
    i
  }
}
